# the-board

./: .gitignore  README.md  pyproject.toml  run_server.py  start.sh  test_theboard.py
frontend/: index.html  script.js  style.css
src/: app.py  crew.py  db.py  main.py
src/config/: agents.yaml  perspectives.yaml  tasks.yaml
