[project]
name = "the_board"
version = "0.1.0"
description = "The-Board using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
the_board = "the_board.main:run"
run_crew = "the_board.main:run"
train = "the_board.main:train"
replay = "the_board.main:replay"
test = "the_board.main:test"
run_with_trigger = "the_board.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
